--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -1,5 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/ripamf2991/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="http://hua.vcfkoo.ga/hua/7" rel="nofollow">大纪元</a> | <a href="http://hua.vcfkoo.ga/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://hua.vcfkoo.ga/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://hua.vcfkoo.ga/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://hua.vcfkoo.ga/hua/11" rel="nofollow">看中国</a> | <a href="http://hua.vcfkoo.ga/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://hua.vcfkoo.ga/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://hua.vcfkoo.ga/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/ripamf2991/djy/blob/master/gb/20/1/1/n11759062.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2020/01/Beth_Israel_Deaconess_Medical_Center_East_Campus-320x200.jpg">偷带癌症研究材料出境 中国学生在美被控罪</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11748178.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2019/12/6160c7b0d602315646131b856d7d61e8-320x200.jpg">【直播中】新唐人电视台2020跨年缤纷夜</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/25/n11744649.md#1">英预言家：2020年中国发生革命 川普连任</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/28/n11750678.md#1">夏小强：台总统候选人政见会结束 大势已定</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/24/n11743411.md#1">中共尽失人心 反习势力与保习派激战</a><br>
@@ -32,7 +32,6 @@
 </td><td VALIGN=TOP width="352">
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/20/1/1/n11759265.md#1">【翻墙必看】2020中共面临“波涛汹涌”</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/20/1/1/n11759287.md#1">新年伊始港警射催泪弹 作家邓小桦眼角中弹</a><br>
-<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11748178.md#1">【直播中】新唐人电视台2020跨年缤纷夜</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/20/1/1/n11759107.md#1">【拍案惊奇】2020注定不平凡 9件事陪你跨年</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11752263.md#1">【2019盘点】华人关注的十大新闻</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758900.md#1">山东偷排污水管深埋入海口 污染令人震惊</a><br>
@@ -42,15 +41,14 @@
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758754.md#1">韩国瑜连喊三声习主席 其副手不承认习头衔</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11757615.md#1">反对反渗透法 台统促党总裁：我就是中共同路人</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758705.md#1">华为：生存是2020第一要务 将淘汰10%主管</a><br>
-<a href="https://github.com/ripamf2991/djy/blob/master/gb/20/1/1/n11759473.md#1">2020新年首日四川自贡现4.3级地震</a><br>
-<a href="https://github.com/ripamf2991/djy/blob/master/gb/20/1/1/n11759388.md#1">新年前一天松原现3个“太阳” 网民热议</a><br>
+<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758448.md#1">2019陆企违约逾1400亿 遍及28省 北京最多</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/20/1/1/n11759400.md#1">2019岁末 民间记者会给港人的一封信</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/20/1/1/n11759103.md#1">中共密码法上路 美参议员警告促企业勿配合</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11759016.md#1">海航董事长承认拖欠工资 资金困境未解</a><br>
+<a href="https://github.com/ripamf2991/djy/blob/master/gb/20/1/1/n11759062.md#1">偷带癌症研究材料出境 中国学生在美被控罪</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758999.md#1">华为2019动荡不安 2020面临四大困境</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758887.md#1">2019大陆车企关键字：下滑、亏损、停产</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758889.md#1">黑龙江男子病重仍遭非法拘留 9天后病亡</a><br>
-<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758448.md#1">2019陆企违约逾1400亿 遍及28省 北京最多</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758321.md#1">安全担忧 美陆军紧随海军禁用TikTok</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11757910.md#1">反渗透法过关 专家吁加细则阻中共染红媒体</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11756981.md#1">法轮大法纽约旗队学员 新年谢师恩</a><br>
@@ -88,12 +86,14 @@
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756423.md#1">三星电机关闭大陆昆山工厂  迁往东南亚</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756383.md#1">美中科技战 北京因一大劣势难超华盛顿</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756339.md#1">陆客陆生如何看台湾总统大选</a><br>
+<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756334.md#1">为救女扮圣诞老人北京摆摊 父遭城管罚款</a><br>
+<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756259.md#1">世界人口最多的十大城市 中国两城市上榜</a><br>
 <br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/nsc413_2.md#1">更多......</a></p></td><td VALIGN=TOP rowspan=6 width="156" align="middle"><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"><br>古今奇观-藏字石</a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720"><br>从610到720</a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例"><br>剖析1400例</a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513"><br>见证513</a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756278.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/unnamed-file-2-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756278.md#1">无尽感恩 宜兰法轮功学员向李洪志先生拜年</a><br>二零一九年十二月二十九日，来自宜兰 ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756214.md#1">“秋雨之福教会”牧师王怡被重判9年</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753358.md#1">黄琦被秘密转至监狱 母亲仍被软禁</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754403.md#1">天津强拆世界级别墅群 数百业主走投无路</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11749398.md#1">甘肃庆阳市法轮功学员被迫害情况综述（中）</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753546.md#1">重庆中学生在学校坠亡 家人被禁见遗体</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756198.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2011/12/1112211235042343-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756198.md#1">老人钱哪去了？大陆养老机构各式承诺频爆雷</a><br>大陆养老机构频频爆雷，先以“优质服 ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11755963.md#1">大陆校园贷形成产业链 高利贷暴力催款横行</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11755622.md#1">黄奇帆：大陆房地产商10年可能淘汰8万</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11755989.md#1">没钱了！中共两部门都喊2020过“紧日子”</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11755948.md#1">纳瓦罗：美中或在下周签第一阶段贸易协议</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11753878.md#1">【十字路口】2020年中国经济九大趋势（下）</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756259.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/1201181506042519-600x400-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756259.md#1">世界人口最多的十大城市 中国两城市上榜</a><br>最新的人口统计显示，2010～2019年全 ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756075.md#1">【新闻看点】法媒：2019 北京的恐怖之年</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756074.md#1">【新闻看点】台湾总统大选三党激战 北京沉默</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756102.md#1">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756006.md#1">总统辩论会 蔡英文读港人来信：不要相信中共</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11755082.md#1">中共恐吓教师校长 港教育界将举行集会回击</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11752375.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2003/11/311153412938-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11752375.md#1">大陆干旱持续数月 江西近33万人饮水困难</a><br>数月以来，中国大陆多省持续严重干旱 ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754339.md#1">重庆涪陵一居民楼着火 6人死亡</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754205.md#1">辽宁沈阳一大巴撞限高杆 车顶全部被削掉</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753030.md#1">山西国企煤矿集团子公司发生事故 5死1伤</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11752431.md#1">杭州一合资化工厂仓库着火</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11748552.md#1">湖北应城4.9级地震 600多户民居现裂缝</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756334.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/fd2ccaaf88e833ea8edac61b5c598a22-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756334.md#1">为救女扮圣诞老人北京摆摊 父遭城管罚款</a><br>32岁的赵忠桥扮圣诞老人近日在北京街 ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756213.md#1">一员工在总部跳楼 海康威视指其“抑郁自杀”</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756041.md#1">失踪8个月 朝鲜官员李善权现身劳动党全会</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754591.md#1">每日三退声明精选（2019/12/29）</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753606.md#1">白宫：若朝鲜试射远程导弹 美将采取行动</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753463.md#1">台大选辩论 聚焦一国两制、香港、反渗透法</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754599.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/de39227d8906a6352954f97858c08ecd-150x120.png"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754599.md#1">曾遭男友辱骂 沈阳航空航天大学女生坠楼亡</a><br>近日，有贴文称，沈阳航空航天大学一 ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754408.md#1">基因编辑婴儿 贺建奎涉非法行医获刑3年</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11749809.md#1">李荣浩叹人的坏没底线 邓紫棋用诗性歌词回应</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11749205.md#1">广州大学前院长获死刑 曾捅死同校处长夫妇</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/25/n11745307.md#1">川普与第一夫人发表圣诞致辞 全文翻译</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/25/n11744548.md#1">2020年天津报纸《城市快报》将休刊</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>网闻禁闻</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/24/n11742493.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/09/0d200b63bdf261cb1251b781df880bbd-600x400-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/24/n11742493.md#1">网文：大陆汽车行业艰难的两大看点</a><br>大陆汽车行业今年深陷泥潭，销量下滑 ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/24/n11742305.md#1">网文：央行钱印出来了 借钱的人没了</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/6/n11706347.md#1">反送中和六四事件 美政府应对措施对比</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/17/n11728358.md#1">港人给抗议者们写圣诞卡：以后再庆祝</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/16/n11726478.md#1">中共参军许进不许出 一大学生退伍遭重罚</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/12/n11718936.md#1">美联社纪念被中共以间谍罪杀害的中国记者</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid2420.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>群体事件</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/26/n11747752.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-458179366-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/26/n11747752.md#1">中科大副校长被指与中共军企合作 曾遭美拒签</a><br>今年年初美签被拒的中国量子科学家潘 ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/26/n11746173.md#1">浙数千学子连续维权三天 抗议学校改名换制</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/24/n11742110.md#1">发表撑港灭共言论 大陆多名公民遭刑拘</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/18/n11731023.md#1">粤村民汽油弹攻政府视频曝光 目击者描述现场</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/17/n11728981.md#1">村民疑政府易地建火葬场 茂名再爆警民冲突</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/15/n11723534.md#1">网传上海市民上街抗议 高呼“打倒腐败”</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid279.md#1">更多......</a></p></td></tr>
+<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756278.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/unnamed-file-2-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756278.md#1">无尽感恩 宜兰法轮功学员向李洪志先生拜年</a><br>二零一九年十二月二十九日，来自宜兰 ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756214.md#1">“秋雨之福教会”牧师王怡被重判9年</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753358.md#1">黄琦被秘密转至监狱 母亲仍被软禁</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754403.md#1">天津强拆世界级别墅群 数百业主走投无路</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11749398.md#1">甘肃庆阳市法轮功学员被迫害情况综述（中）</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753546.md#1">重庆中学生在学校坠亡 家人被禁见遗体</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756198.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2011/12/1112211235042343-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756198.md#1">老人钱哪去了？大陆养老机构各式承诺频爆雷</a><br>大陆养老机构频频爆雷，先以“优质服 ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11755963.md#1">大陆校园贷形成产业链 高利贷暴力催款横行</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11755622.md#1">黄奇帆：大陆房地产商10年可能淘汰8万</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11755989.md#1">没钱了！中共两部门都喊2020过“紧日子”</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11755948.md#1">纳瓦罗：美中或在下周签第一阶段贸易协议</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11753878.md#1">【十字路口】2020年中国经济九大趋势（下）</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756075.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/11/630290944-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756075.md#1">【新闻看点】法媒：2019 北京的恐怖之年</a><br>回顾2019年，围绕着中共，发生了不少 ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756074.md#1">【新闻看点】台湾总统大选三党激战 北京沉默</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756102.md#1">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756006.md#1">总统辩论会 蔡英文读港人来信：不要相信中共</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11755082.md#1">中共恐吓教师校长 港教育界将举行集会回击</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11755956.md#1">中共网控再升级  制作及转发视频要实名制</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11752375.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2003/11/311153412938-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11752375.md#1">大陆干旱持续数月 江西近33万人饮水困难</a><br>数月以来，中国大陆多省持续严重干旱 ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754339.md#1">重庆涪陵一居民楼着火 6人死亡</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754205.md#1">辽宁沈阳一大巴撞限高杆 车顶全部被削掉</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753030.md#1">山西国企煤矿集团子公司发生事故 5死1伤</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11752431.md#1">杭州一合资化工厂仓库着火</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11748552.md#1">湖北应城4.9级地震 600多户民居现裂缝</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756213.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/e5d6aab0b85e4f8b74eeb052a456b5d0-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756213.md#1">一员工在总部跳楼 海康威视指其“抑郁自杀”</a><br>大陆监控设备科技公司海康威视发布通 ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756041.md#1">失踪8个月 朝鲜官员李善权现身劳动党全会</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754591.md#1">每日三退声明精选（2019/12/29）</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753606.md#1">白宫：若朝鲜试射远程导弹 美将采取行动</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753463.md#1">台大选辩论 聚焦一国两制、香港、反渗透法</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753758.md#1">美情报助俄破获恐怖袭击 普京致电感谢川普</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754599.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/de39227d8906a6352954f97858c08ecd-150x120.png"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754599.md#1">曾遭男友辱骂 沈阳航空航天大学女生坠楼亡</a><br>近日，有贴文称，沈阳航空航天大学一 ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754408.md#1">基因编辑婴儿 贺建奎涉非法行医获刑3年</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11749809.md#1">李荣浩叹人的坏没底线 邓紫棋用诗性歌词回应</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11749205.md#1">广州大学前院长获死刑 曾捅死同校处长夫妇</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/25/n11745307.md#1">川普与第一夫人发表圣诞致辞 全文翻译</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/25/n11744548.md#1">2020年天津报纸《城市快报》将休刊</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>网闻禁闻</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/24/n11742493.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/09/0d200b63bdf261cb1251b781df880bbd-600x400-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/24/n11742493.md#1">网文：大陆汽车行业艰难的两大看点</a><br>大陆汽车行业今年深陷泥潭，销量下滑 ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/24/n11742305.md#1">网文：央行钱印出来了 借钱的人没了</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/6/n11706347.md#1">反送中和六四事件 美政府应对措施对比</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/17/n11728358.md#1">港人给抗议者们写圣诞卡：以后再庆祝</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/16/n11726478.md#1">中共参军许进不许出 一大学生退伍遭重罚</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/12/n11718936.md#1">美联社纪念被中共以间谍罪杀害的中国记者</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid2420.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>群体事件</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/26/n11747752.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-458179366-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/26/n11747752.md#1">中科大副校长被指与中共军企合作 曾遭美拒签</a><br>今年年初美签被拒的中国量子科学家潘 ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/26/n11746173.md#1">浙数千学子连续维权三天 抗议学校改名换制</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/24/n11742110.md#1">发表撑港灭共言论 大陆多名公民遭刑拘</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/18/n11731023.md#1">粤村民汽油弹攻政府视频曝光 目击者描述现场</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/17/n11728981.md#1">村民疑政府易地建火葬场 茂名再爆警民冲突</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/15/n11723534.md#1">网传上海市民上街抗议 高呼“打倒腐败”</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid279.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 349,040,528 人
+- 共 349,040,058 人
 ```
 </strong>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/11/19/n11666092.md#1">九评15周年 看大陆民众弃中共 句句真情</a><br>
