--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -1,6 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/ublry267/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ublry267/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ublry267/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ublry267/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ublry267/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ublry267/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ublry267/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ublry267/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="http://hua.vcfkoo.ga/hua/7" rel="nofollow">大纪元</a> | <a href="http://hua.vcfkoo.ga/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://hua.vcfkoo.ga/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://hua.vcfkoo.ga/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://hua.vcfkoo.ga/hua/11" rel="nofollow">看中国</a> | <a href="http://hua.vcfkoo.ga/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://hua.vcfkoo.ga/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://hua.vcfkoo.ga/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr>
 <tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/27/n11750092.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2020/01/2001010156271501-320x200.jpg">【直播中】2020元旦 港人大游行</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
-<a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11744649.md#1">英预言家：2020年中国发生革命 川普连任</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11750678.md#1">夏小强：台总统候选人政见会结束 大势已定</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/24/n11743411.md#1">中共尽失人心 反习势力与保习派激战</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11745443.md#1">摩托车横穿李克强车队 险酿意外</a><br>
@@ -8,7 +7,9 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11756102.md#1">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11745226.md#1">遭病人家属刺颈 北京一医院女医生伤重身亡</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/29/n11753643.md#1">汤唯面对镜头洒泪 揭开女星不为人知的尴尬</a><br>
+<a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11745357.md#1">李小龙女儿起诉大陆真功夫餐厅 索赔逾2亿元</a><br>
 <br><p><a href="https://github.com/ublry267/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/ublry267/djy/blob/master/gb/19/12/27/n11749214.md#1">李旭彤：挖掘五千年文明惊世宝藏（12）</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760118.md#1">颜智华：北京医生被杀 背后或掩盖医疗黑幕</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759935.md#1">李铭：恭祝李大师新年好 世人感激大法洪恩</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759747.md#1">横河：台湾反渗透法对两岸的冲击</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758622.md#1">颜丹：中共“放开落户”无关迁徙自由</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11757865.md#1">陈思敏：中共5G现况虚火过盛</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11757360.md#1">洪微：中共新军事战略受挫</a><br>
-<a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11757068.md#1">王友群：面对“八国联军”清军为何兵败如山倒</a><br>
 <br><p><a href="https://github.com/ublry267/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/23/n11739570.md#1">【2019盘点】时代变革 川普的九记重锤</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11743871.md#1">【独家】原大陆医生：我为何远离器官移植</a><br>
